# skeights

./: .gitignore  CHANGELOG.md  LICENSE  README.md  demo.ipynb  pyproject.toml
.github/workflows/: ci.yml  nightly.yml  publish.yml
scripts/: measure_sizes.py
src/skeights/: __init__.py  _core.py  _gp.py  _hgb.py  _io.py  _kernels.py  _lgbm.py  _mlp.py  _params.py  _trees.py  _ttr.py  _utils.py  _version.py  _xgb.py
tests/: conftest.py  generate_fixtures.py  test_errors.py  test_features_targets.py  test_golden.py  test_gp.py  test_hgb.py  test_io.py  test_kernels.py  test_lgbm.py  test_lgbm_columnar.py  test_linear.py  test_mlp.py  test_params.py  test_retrain.py  test_round_trip.py  test_structural.py  test_trees.py  test_ttr.py  test_xgb.py  test_xgb_columnar.py
tests/fixtures/: X_test.npy  gradient_boosting.json  gradient_boosting.safetensors  gradient_boosting_preds.npy  hist_gradient_boosting.json  hist_gradient_boosting.safetensors  hist_gradient_boosting_preds.npy  lgbm.json  lgbm_columnar.json  lgbm_columnar.safetensors  lgbm_native.json  lgbm_native.safetensors  lgbm_native_preds.npy  mlp.json  mlp.safetensors  mlp_preds.npy  pipeline.json  pipeline.safetensors  pipeline_preds.npy  random_forest.json  random_forest.safetensors  random_forest_preds.npy  ridge.json  ridge.safetensors  ridge_preds.npy  xgb.json  xgb_columnar.json  xgb_columnar.safetensors  xgb_columnar_preds.npy  xgb_native.json  xgb_native.safetensors
