[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skeights"
version = "0.1.0"
description = "Serialize fitted scikit-learn models to safetensors + JSON"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Gigaton", email = "engineering@gigaton.co" },
]
keywords = ["scikit-learn", "serialization", "safetensors", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "scikit-learn>=1.5",
    "safetensors",
]

[project.optional-dependencies]
lightgbm = ["lightgbm"]
xgboost = ["xgboost"]
all = ["lightgbm", "xgboost"]
dev = [
    "pandas",
    "pytest",
    "lightgbm",
    "xgboost",
    "ruff",
    "pyright",
]

[project.urls]
Repository = "https://github.com/carbon-re/skeights"

[tool.hatch.build.targets.wheel]
packages = ["src/skeights"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
